--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@ I love dogs and i have three dog
 My elder dog name is Kevin which is lab cross
 My second dog name is Saara which is labrador
 My third dog name is saki which is ND dog
+Irrespectives of dog breed all dog will showers with love and affection
+so it is prefered to adopt indian mongrel
+hkjdkhkkh
